<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="G7U-tQ-xSN">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
        <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Photos Collection View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="PhotosCollectionViewController" customModule="Astronomy" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="x4T-SY-qY3">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="b06-CH-qi5">
                                    <size key="itemSize" width="150" height="150"/>
                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                </collectionViewFlowLayout>
                                <cells>
                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ImageCell" id="Ljo-u8-cbz" customClass="ImageCollectionViewCell" customModule="Astronomy" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                            <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MarsPlaceholder" translatesAutoresizingMaskIntoConstraints="NO" id="xlN-QE-XWB">
                                                    <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                                </imageView>
                                            </subviews>
                                        </view>
                                        <constraints>
                                            <constraint firstItem="xlN-QE-XWB" firstAttribute="top" secondItem="Ljo-u8-cbz" secondAttribute="top" id="UIu-Cz-XX5"/>
                                            <constraint firstAttribute="trailing" secondItem="xlN-QE-XWB" secondAttribute="trailing" id="X44-Ux-GSq"/>
                                            <constraint firstItem="xlN-QE-XWB" firstAttribute="leading" secondItem="Ljo-u8-cbz" secondAttribute="leading" id="ndA-Z0-1y1"/>
                                            <constraint firstAttribute="bottom" secondItem="xlN-QE-XWB" secondAttribute="bottom" id="x4l-Q0-qQ8"/>
                                        </constraints>
                                        <connections>
                                            <outlet property="imageView" destination="xlN-QE-XWB" id="jDL-o0-Zt0"/>
                                            <segue destination="kgd-gk-9pr" kind="show" identifier="ShowDetail" id="LAJ-Rh-Myv"/>
                                        </connections>
                                    </collectionViewCell>
                                </cells>
                                <connections>
                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="7Oz-qw-1zv"/>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="LZ4-Vy-YyR"/>
                                </connections>
                            </collectionView>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="x4T-SY-qY3" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Bwf-JT-RXO"/>
                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="x4T-SY-qY3" secondAttribute="bottom" id="JUK-BJ-yT3"/>
                            <constraint firstItem="x4T-SY-qY3" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="TLV-Vs-e2N"/>
                            <constraint firstAttribute="trailing" secondItem="x4T-SY-qY3" secondAttribute="trailing" id="zbI-ym-VfE"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="ak8-Zx-qVV"/>
                    <connections>
                        <outlet property="collectionView" destination="x4T-SY-qY3" id="NaP-Ts-T0N"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1103.2" y="117.39130434782609"/>
        </scene>
        <!--Title-->
        <scene sceneID="8hb-Lt-fj0">
            <objects>
                <viewController id="kgd-gk-9pr" customClass="PhotoDetailViewController" customModule="Astronomy" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="jW9-Pv-wBy"/>
                        <viewControllerLayoutGuide type="bottom" id="Ojm-q3-djU"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="26Z-Jb-jmZ">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MarsPlaceholder" translatesAutoresizingMaskIntoConstraints="NO" id="33C-GV-pNd">
                                <rect key="frame" x="0.0" y="64" width="375" height="377"/>
                                <accessibility key="accessibilityConfiguration" identifier="PhotoDetailViewController.ImageView"/>
                            </imageView>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="MyK-rk-mFe">
                                <rect key="frame" x="16" y="449" width="343" height="87"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Taken by &lt;Rover&gt; on &lt;date&gt; (Sol &lt;sol&gt;)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PDa-7E-DHh">
                                        <rect key="frame" x="0.0" y="0.0" width="343" height="20.5"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <stackView opaque="NO" contentMode="scaleToFill" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="TOy-rH-ozy">
                                        <rect key="frame" x="0.0" y="28.5" width="343" height="20.5"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Camera:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jhh-vC-QKo">
                                                <rect key="frame" x="0.0" y="0.0" width="64.5" height="20.5"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9gd-7b-dyz">
                                                <rect key="frame" x="72.5" y="0.0" width="270.5" height="20.5"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                        </subviews>
                                    </stackView>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k8d-jC-3Jh">
                                        <rect key="frame" x="0.0" y="57" width="343" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="PhotoDetailViewController.SaveButton"/>
                                        <state key="normal" title="Save to Photo Library"/>
                                        <connections>
                                            <action selector="save:" destination="kgd-gk-9pr" eventType="touchUpInside" id="ROY-9I-JfD"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <constraints>
                            <constraint firstAttribute="trailing" secondItem="33C-GV-pNd" secondAttribute="trailing" id="0S7-RX-YpK"/>
                            <constraint firstItem="MyK-rk-mFe" firstAttribute="top" secondItem="33C-GV-pNd" secondAttribute="bottom" constant="8" id="2j9-OS-JIR"/>
                            <constraint firstItem="MyK-rk-mFe" firstAttribute="leading" secondItem="26Z-Jb-jmZ" secondAttribute="leadingMargin" id="GSx-Fw-fxf"/>
                            <constraint firstAttribute="trailingMargin" secondItem="MyK-rk-mFe" secondAttribute="trailing" id="PM2-C1-Df0"/>
                            <constraint firstItem="33C-GV-pNd" firstAttribute="top" secondItem="jW9-Pv-wBy" secondAttribute="bottom" id="bUE-tK-SGH"/>
                            <constraint firstItem="Ojm-q3-djU" firstAttribute="top" secondItem="33C-GV-pNd" secondAttribute="bottom" constant="226" id="fsC-Xg-4a4"/>
                            <constraint firstItem="33C-GV-pNd" firstAttribute="leading" secondItem="26Z-Jb-jmZ" secondAttribute="leading" id="ku0-go-1Ac"/>
                            <constraint firstItem="Ojm-q3-djU" firstAttribute="top" relation="greaterThanOrEqual" secondItem="MyK-rk-mFe" secondAttribute="bottom" constant="10" id="ymg-tv-o1t"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Title" id="4ed-4v-HFq"/>
                    <connections>
                        <outlet property="cameraLabel" destination="9gd-7b-dyz" id="dG4-JQ-QmJ"/>
                        <outlet property="detailLabel" destination="PDa-7E-DHh" id="ge4-Ld-wmV"/>
                        <outlet property="imageView" destination="33C-GV-pNd" id="GKy-q9-3KS"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="qe7-tZ-Quj" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1973.5999999999999" y="116.49175412293854"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="IDO-pg-60M">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="G7U-tQ-xSN" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="b6M-fJ-5bP">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="4od-98-z5v"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="HWY-Su-gpi" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="164" y="117.39130434782609"/>
        </scene>
    </scenes>
    <resources>
        <image name="MarsPlaceholder" width="450" height="450"/>
    </resources>
</document>
